<resources>
    <string name="app_name">MusicApp</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="fullname">Your fullname</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="signIn">Sign In</string>
    <string name="millions_of_songs">Millions of songs\nFree on Spotify</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="log_in">Log in</string>
    <string name="your_age">Your age</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password_too_short">Password is too short</string>
    <string name="error_password_insecure">Password is insecure</string>
    <string name="error_name_invalid_length">Name length is invalid</string>
    <string name="error_age_invalid">Age must be valid and at least 13</string>
    <string name="signup_success">Sign up success</string>
    <string name="signup_error">Sign up failed. Error occurs</string>
    <string name="remember_me">Remember me</string>
    <string name="error">Error</string>

    <string name="error_no_internet_connection">No Internet Connection</string>
    <string name="app_go_offline">App Go Offline</string>
    <string name="error_email_is_not_registered">Email Is Not Registered</string>
    <string name="error_password_is_incorrect">Password Is Incorrect</string>
    <string name="error_login_failed">Login Failed</string>

    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_library">Library</string>
    <string name="tab_profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="tab_track">Track</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_album">Album</string>

    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="default_cover">Default Cover</string>
</resources>