<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/spotifyBlack"
        android:orientation="vertical"
        tools:context=".ui.authentication.LoginFragment">

        <ImageView
            android:id="@+id/imageview_StartLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="245dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/spotify_black_white" />

        <TextView
            android:id="@+id/textview_StartMillionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/millions_of_songs"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:maxLines="2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_StartSignUpButton"
            style="@style/SpotifyGreenButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up_free"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/button_StartLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

