<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.LoginFragment"
        android:background="@color/spotifyBlack"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingVertical="10dp"
            >

            <TextView
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:background="@drawable/ic_backarrow"
                android:layout_gravity="bottom">
            </Button>

        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_LoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textSize="20sp" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_LoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkbox_LoginRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/remember_me"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:buttonTint="@color/spotifyGreen" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_LoginLogin"
                    style="@style/SpotifyGreenButton"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:paddingHorizontal="45dp"
                    android:paddingVertical="15dp"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </com.google.android.material.button.MaterialButton>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/ProgressBar_LoginLoading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress_background"
        android:progress="0" />
</FrameLayout>
